定義型の整備