@@ -83,7 +83,7 @@ public class SpaceService {
         if (spaceList.isEmpty()) {
             throw new NotJoinException();
         }
-        SpaceEntity space = spaceList.get(0);
+        SpaceEntity space = spaceList.getFirst();
         return new SpaceInfo(
                 space.getId(),
                 space.getOwnerId(),
@@ -104,7 +104,7 @@ public class SpaceService {
                 spaceId,
                 registerDto.userId(),
                 registerDto.name(),
-                lyceeDate.getMilliseconds(),
+                lyceeDate.get(),
                 registerDto.closeTime()
         );
 
